--- a/web_app/app/styles/main.css
+++ b/web_app/app/styles/main.css
@@ -135,8 +135,17 @@ nav .container-fluid {
 	height: 42px;
 }
 
-.card{
+.card {
 	-webkit-box-shadow: 2px 2px 5px -1px rgba(0, 0, 0, 0.55);
 	-moz-box-shadow: 2px 2px 5px -1px rgba(0, 0, 0, 0.55);
 	box-shadow: 2px 2px 5px -1px rgba(0, 0, 0, 0.55);
+}
+
+.table-title th{
+	text-align: center;
+}
+
+
+.table-title .table-btn-title{
+	float: right;
 }
